--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,15 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,400&display=swap');
+*{
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
 }
+.background
+{
+    background : linear-gradient(90.80079989371438deg, rgb(7, 153, 163) 5.7267741123718885%,rgb(13, 115, 122) 79.05103289714494%);
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+    /* color: white; */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
